--- a/SecureChat/app/src/main/res/layout-v21/activity_main.xml
+++ b/SecureChat/app/src/main/res/layout-v21/activity_main.xml
@@ -7,15 +7,27 @@
 
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
-        android:id="@+id/sometext"
+        android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:fontFamily="sans-serif"
-        android:text="You are logged in"
-        android:textColor="#F7F7F8"
-        android:textSize="15sp"
+        android:text="username"
+        android:textStyle="bold"
+        android:textColor="#fff"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,14 +36,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="500dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif"
         android:text="Logout"
-        android:textSize="13sp"
+        android:background="@color/colorPrimary"
+        android:textColor="#fff"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sometext" />
+        app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
 
 
