--- a/SecureChat/app/src/main/res/layout/activity_login.xml
+++ b/SecureChat/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".Login">
 
+    <include layout="@layout/bar_layout"
+        android:id="@+id/toolbar"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
