--- a/SecureChat/app/src/main/res/layout/activity_register.xml
+++ b/SecureChat/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
+    <include layout="@layout/bar_layout"
+        android:id="@+id/toolbar"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
