--- a/SecureChat/app/src/main/res/layout/bar_layout.xml
+++ b/SecureChat/app/src/main/res/layout/bar_layout.xml
@@ -2,6 +2,8 @@
 <androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/toolbar">
+    android:id="@+id/toolbar"
+    android:background="@color/colorPrimary">
+
 
 </androidx.appcompat.widget.Toolbar>
