--- a/SecureChat/app/src/main/res/values/colors.xml
+++ b/SecureChat/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#FB5431</color>
     <color name="colorPrimaryDark">#FB3E31</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="white">#fff</color>
 </resources>
