added encryption and decryption to messages

--- a/SecureChat/app/src/main/res/layout/messageitem_left.xml
+++ b/SecureChat/app/src/main/res/layout/messageitem_left.xml
@@ -16,6 +16,7 @@
         android:background="@drawable/background_left"
         android:layout_toRightOf="@id/user_image"
         android:layout_marginLeft="5dp"
+        android:layout_marginBottom="3dp"
         android:id="@+id/show_message"
         android:textSize="18sp"
         android:text="hello"
