--- a/SecureChat/app/src/main/res/drawable/background_left.xml
+++ b/SecureChat/app/src/main/res/drawable/background_left.xml
@@ -5,6 +5,6 @@
     <corners
         android:radius="10dp"
         android:topLeftRadius="0dp"/>
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/light_gray"/>
 
 </shape>
